# urban-stl-analytics

./: .env.example  AI_INTEGRATION_IDEAS.md  AI_V2_ML_DEEP_DIVE.md  CLAUDE.md  FINDINGS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: AI_FEATURE_DEEP_DIVE.md  DATA-SOURCES.md  FEATURES.md  FINDINGS.md  PERFORMANCE.md  responsive.md
python/: pyproject.toml
python/notebooks/: ml.ipynb
python/scripts/: clean_data.py  fetch_raw.py
python/training/: crosssectional_test.csv  crosssectional_train.csv  model2_codebook.json  ols.py  panel_full.csv  panel_test.csv  panel_train.csv
src/: styles.css
src/components/: Nav.tsx
src/components/about/: AboutPage.tsx
src/components/affected/: AffectedDashboard.tsx  AffectedKpiCards.tsx  AffectedNeighborhoodRow.tsx
src/components/charts/: CategoryBarChart.tsx  HourlyChart.tsx  TimeSeriesChart.tsx
src/components/explorer/: AnalyticsPanel.tsx  CommandBar.tsx  DetailPanel.tsx  ExplorerMap.tsx  ExplorerProvider.tsx  LayerFab.tsx  LayerPanel.tsx  MapExplorer.tsx  MobileLayerDrawer.tsx  TimeRangeSlider.tsx
src/components/housing/: HousingDashboard.tsx  HousingKpiCards.tsx
src/components/landing/: LandingPage.tsx
src/components/map/: MapLegend.tsx  MapProvider.tsx
src/lib/: affected-scoring.ts  analysis.ts  chart-datasets.ts  colors.ts  equity.ts  explorer-types.ts  migration-data.ts  neighborhood-metrics.ts  population-history.ts  price-data.ts  scoring.ts  types.ts
src/routes/: __root.tsx  _app.tsx  _bare.tsx
src/stores/: data-store.ts  explorer-store.ts
(+68 files in other folders)
