[project]
name = "stl-urban-analytics"
version = "0.1.0"
description = "Data analysis and pipeline tools for STL Urban Analytics"
requires-python = ">=3.12"
dependencies = [
    # Data pipeline (existing)
    "requests>=2.28",
    "pyshp>=2.3",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # Analysis
    "pandas>=2.2",
    "geopandas>=1.0",
    "shapely>=2.0",
    # Notebooks
    "jupyter>=1.1",
    "ipykernel>=6.29",
    # Visualization
    "matplotlib>=3.9",
    "folium>=0.17",
    "scikit-learn>=1.8.0",
    "linearmodels>=7.0",
    "numpy>=2.4.2",
    "statsmodels>=0.14.6",
]

[project.scripts]
download-data = "scripts.download_data:main"
